//
//  Strings.swift
//  PrintShopProQuoter
//
//  Created by Scott Leonard on 3/7/20.
//  Copyright © 2020 DuhMarket. All rights reserved.
//

import Foundation

// Main Buttons On Company Landing Page
let LOCATION = "Location"
let QUOTES = "Quotes"
let ORDERS = "Orders"
let CONTACT_INFO = "Contact Info"

//Button Text
let SUBMIT = "Submit"

//Navigation Bar Titles
let CUSTOMER_LIST = "Customer List"

//Placeholder Strings
let NO_COMPANY_DEFAULT_STRING = "No Company"
let ADD_CUSTOMER = "Add Customer"
let ADD_COMPANY = "Add Company"
let ADD_ADDRESS = "Add Address"
let ADD_CONTACT = "Add Contact"
let ERROR_NO_VALUE = "Error No Value"
let COMPANY_NAME = "Company Name"
let ADDRESS = "Address"
let SAVE_NEW_COMPANY = "Save New Company"
let STREET = "Street"
let CITY = "City"
let STATE = "State"
let COUNTRY = "Country"
let ZIPCODE = "Zipcode"
let CONTACT = "Contact"
let NAME = "Name"
let PHONE_NUMBER = "Phone Number"
let EMAIL = "Email"
let BLANK = ""

//MARK: CoreData Strings

let CORE_COMPANY = "CoreCompany"
let CORE_ADDRESS = "CoreAddress"
