...
						createdContact.email = self.email
						self.contact.append(createdContact)
						
						self.resetTextFields()
					}) {
						
						SmallCircle_Button(imageName: "pencil.and.ellipsis.rectangle")
							
					}
					.padding(.trailing, 100)
					.disabled(validation() ? true : false)
					.opacity(validation() ? 0.2 : 1.0)
					.animation(.easeIn(duration: 1))
					
					//Adds array of contacts to Company object.
					Button(action: {
						self.presentationMode.wrappedValue.dismiss()
					}, label: {
						
						SmallCircle_Button(imageName: "tray.and.arrow.down.fill")
					})
						.disabled(contact.isEmpty ? true : false)
						.opacity(contact.isEmpty ? 0.2 : 1.0)
						.animation(.easeIn(duration: 1))
				}
				.padding(.leading)
...
